--- a/Desafio_modulo3.ipynb
+++ b/Desafio_modulo3.ipynb
@@ -1360,33 +1360,10 @@
         "dfn['Mun_Total de óbitos'] = dfn['Mun_Total de óbitos'].astype('int64')"
       ],
       "metadata": {
-        "id": "GsYRrlLfFkPr",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7a7af466-fec3-4883-b3d0-df62e0da0f09"
+        "id": "GsYRrlLfFkPr"
       },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \"\"\"Entry point for launching an IPython kernel.\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  \n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1659,42 +1636,15 @@
         "  if(dfn['Grande região'][i] == 'Interior'):\n",
         "    casosInterior = casosInterior + dfn['Mun_Total de casos'][i]\n",
         "  else:\n",
-        "    casosRGM = casosRGM + dfn['Mun_Total de casos'][i]"
+        "    casosRGM = casosRGM + dfn['Mun_Total de casos'][i]\n",
+        "\n",
+        "total = casosInterior+casosRGM"
       ],
       "metadata": {
         "id": "2n05RN1biY3z"
       },
       "execution_count": 12,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "total = casosInterior+casosRGM\n",
-        "\n",
-        "print('Quantidade total de casos no Interior:', casosInterior)\n",
-        "print('Quantidade total de casos na Região Metropolitana:', casosRGM)\n",
-        "print('Quantidade total de casos em São Paulo:', total)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RT0NYlaZjRr9",
-        "outputId": "06e6d13f-f276-4b20-d2a9-bd64930ed285"
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Quantidade total de casos no Interior: 4184048\n",
-            "Quantidade total de casos na Região Metropolitana: 1979353\n",
-            "Quantidade total de casos em São Paulo: 6163401\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -4594,30 +4544,13 @@
         "\n",
         "for i in range(0,5):\n",
         "  relacaoPopCasosRGM[i] = (df_cidadesRGMA['Mun_Total de casos'][i]*100)/populacaoRGM[i]\n",
-        "  relacaoPopCasosI[i] = (df_cidadesInterior5['Mun_Total de casos'][i]*100)/populacaoInterior[i]\n",
-        "  print([relacaoPopCasosRGM[i], relacaoPopCasosI[i]])"
+        "  relacaoPopCasosI[i] = (df_cidadesInterior5['Mun_Total de casos'][i]*100)/populacaoInterior[i]"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aPQkG9lJ-h90",
-        "outputId": "b638d482-1c10-4c31-ac1e-f2c7d6aa7782"
+        "id": "aPQkG9lJ-h90"
       },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[9.399791666666667, 20.1597]\n",
-            "[12.867945205479453, 30.319787234042554]\n",
-            "[6.050785714285714, 17.11527027027027]\n",
-            "[9.067529411764706, 15.257826086956522]\n",
-            "[6.963571428571429, 14.571666666666667]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4634,11 +4567,11 @@
     {
       "cell_type": "code",
       "source": [
-        "barwidth = 0.4\n",
+        "barComp = 0.4\n",
         "plt.figure(figsize=(9,5))\n",
         "\n",
-        "plt.barh(mun_RGM, relacaoPopCasosRGM, color = 'salmon', height = barwidth , label = 'Metropolitana')\n",
-        "plt.barh(mun_I, relacaoPopCasosI, color = 'navy', height = barwidth, label = 'Interior')\n",
+        "plt.barh(mun_RGM, relacaoPopCasosRGM, color = 'salmon', height = barComp , label = 'Metropolitana')\n",
+        "plt.barh(mun_I, relacaoPopCasosI, color = 'navy', height = barComp, label = 'Interior')\n",
         "plt.xlabel('Porcentagem da população testada positivamente [%]')\n",
         "plt.title('Relação entre a população de cada cidade e os casos registrados')\n",
         "plt.legend()\n",
@@ -4750,7 +4683,6 @@
         "\n",
         "pdf.add_page()\n",
         "\n",
-        "#IMG\n",
         "pdf.image(name='CasosInt.png',x=30,y=15,w=150)\n",
         "pdf.image(name='CasosRGM.png',x=30,y=95,w=150)\n",
         "\n",
@@ -4777,23 +4709,10 @@
         "pdf.output('relatório.pdf')"
       ],
       "metadata": {
-        "id": "Bwrg5AZT7mbo",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e947d082-410d-4c66-ae7a-d9e83faaabb2"
+        "id": "Bwrg5AZT7mbo"
       },
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:7: DeprecationWarning: The parameter \"ln\" is deprecated. Instead of ln=True use new_x=XPos.LMARGIN, new_y=YPos.NEXT.\n",
-            "  import sys\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
